# api-demo

./: README.md  execution.md  pyproject.toml  rest_secret.yml
api_demo/: graphql_api.py  rest_api.py
stock_api/: rest_api.py  server.py
tests/: test_graphql.py  test_rest.py
